# TheTensor

./: .gitignore  CMakeLists.txt  FileMaker.sh  LICENSE  Makefile  README.md  com.sh  makefile  run  run.out  test_01  theTensor
include/: basic.hpp  define.hpp  interface.hpp  log.hpp  matrix.hpp  memory.hpp  network.hpp  rom.hpp  simd_add.hpp  story.hpp  vector.hpp
include/thetensor/: basic.hpp  define.h  define.hpp  file.hpp  log.hpp  matrix.hpp  memory.hpp  network.hpp  parallel.cuh  parallel.h  parallel.hpp  random.hpp  rom.hpp  story.hpp  vector.hpp
includes/: basic.hpp  define.hpp  math.hpp  matrix.hpp  memory.hpp  number.hpp  tensor.hpp  vector.hpp
log/: log_00001.txt  log_00002.txt
makefile/: com.sh  ct.sh  test.sh
setting/: FileMaker.sh
sorce/: Tenser.cpp
src/: Basic.cc  Math.cc  Matrix.cc  Matrix.cpp  Tenser.cpp  Tensor.cc  Vector.cc  basic.cc  define.c  log.cc  memory.cc  parallel.cu  random.cc  rom.cc  simd_add.cc
temp/test_01/: virtrul_log  virtrul_log.cc
temp/test_01/log/: log_00001.txt
temp/test_02/: log_divide.cc  log_divide.hpp  log_main.cc
temp/test_02/log/: log_00000.txt  log_00001.txt  log_00002.txt  log_00003.txt  log_00004.txt  log_00005.txt  log_00006.txt  log_00007.txt  log_00008.txt  log_00009.txt  log_0000A.txt  log_0000B.txt
test/: NN_model.cc  cuda_test.cc  cuda_test.cu  data_reader.cc  datas_maker.cc  model.cc  test_00.txt  test_01.cc  test_01.cpp  test_02.cc  test_03.cc  test_04.cc  test_05.cc  test_06.cc  test_07.cc  test_08.cc  test_09.cc  test_10.cc  test_11.cc  test_12.cc  test_basic.cc  test_basic_hpp.cc  test_cuda.cc  test_file.cc  test_log.cc  test_logfile.cc  test_matrix.cc  test_memory.cc  test_network.cc  test_new_operator.cc  test_parallel.cc  test_random.cc  test_rom.cc  test_simd_add.cc  test_stdarg.cc  test_story.cc  test_vector.cc
